Blender 2.8, Selection tool crashes blender in editmode. Only in Vertex and/or Edge Select. #62999

Closed
opened 2019-03-27 10:19:28 +01:00 by Rodger Davis · 18 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.4963

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-26 18:57, hash: 337eb8c1de

Short description of error
Blender crashes when using the selection tool(any) in editmode. Only happens in edit mode.
However, it is space/area sensitive. While you use the selection tool.. You can click anywhere in red and it will cause an immediate crash.
Do not click here.png
This does not happen in face selection. Any conjunction with vertex or edge selection does cause a crash.

Exact steps for others to reproduce the error
Open blender
Load Factory Settings
Select default cube
Change to editmode
Selection tool enabled
Edge and/or Vertex selection enabled.
Click anywhere in red that was shown in the picture.
[Crash]

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.4963 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-26 18:57, hash: `337eb8c1de` **Short description of error** Blender crashes when using the selection tool(any) in editmode. Only happens in edit mode. However, it is space/area sensitive. While you use the selection tool.. You can click anywhere in red and it will cause an immediate crash. ![Do not click here.png](https://archive.blender.org/developer/F6889875/Do_not_click_here.png) This does not happen in face selection. Any conjunction with vertex or edge selection does cause a crash. **Exact steps for others to reproduce the error** Open blender Load Factory Settings Select default cube Change to editmode Selection tool enabled Edge and/or Vertex selection enabled. Click anywhere in red that was shown in the picture. [Crash]
Author

Added subscriber: @RodDavis

Added subscriber: @RodDavis

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot reproduce it on Windows 10 with NVIDIA RTX2080TI

I cannot reproduce it on Windows 10 with NVIDIA RTX2080TI

Added subscribers: @mano-wii, @brecht

Added subscribers: @mano-wii, @brecht

Is this something that started happening recently?

@mano-wii, possibly related to your recent changes regarding viewports and selection.

Is this something that started happening recently? @mano-wii, possibly related to your recent changes regarding viewports and selection.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Also cannot reproduce (fedora29, 970m)

might be HD Graphics 5500 related?

Has this worked in previous builds?

Could you check running blender_debug_gpu.cmd or blender_debug_gpu_glitchworkaround.cmd (provided in the buildbot builds) and paste the generated blender_debug_output.txt here?

Also cannot reproduce (fedora29, 970m) might be HD Graphics 5500 related? Has this worked in previous builds? Could you check running `blender_debug_gpu.cmd` or `blender_debug_gpu_glitchworkaround.cmd` (provided in the buildbot builds) and paste the generated blender_debug_output.txt here?

By the decryption (specifying the area of the crash), it's quite possible that the problem inside in GL_SCISSOR_TEST.
I've commited the 00bdb5cdf0 in the intention to fix it.
@RodDavis, when possible, please confirm that the problem has been fixed.

By the decryption (specifying the area of the crash), it's quite possible that the problem inside in `GL_SCISSOR_TEST`. I've commited the 00bdb5cdf0 in the intention to fix it. @RodDavis, when possible, please confirm that the problem has been fixed.
Author

e80527ec4d No change.

Don't know if this helps, but loopcut crashes blender as soon as you click it. Loopcut is the only editmode tool that crashes blender. Maybe it's something there?

e80527ec4de2 No change. Don't know if this helps, but loopcut crashes blender as soon as you click it. Loopcut is the only editmode tool that crashes blender. Maybe it's something there?
Author

Update.
As long as X-ray is toggled ON, then everything works and no problems.. Blender crashes if you do as mentioned while it is toggled OFF.

Update. As long as X-ray is toggled ON, then everything works and no problems.. Blender crashes if you do as mentioned while it is toggled OFF.
Author

My apologies Philipp, output file from e80527ec4d
blender_debug_output.txt

My apologies Philipp, output file from e80527ec4de2 [blender_debug_output.txt](https://archive.blender.org/developer/F6894515/blender_debug_output.txt)

Thanks for the info,
Committed another possible fix -> d5cb425b87

Thanks for the info, Committed another possible fix -> d5cb425b87
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Rodger Davis self-assigned this 2019-03-29 02:33:42 +01:00
Author

Fixed

I was late to get to the last builds, Germano. However the latest build works, 99d4321fef
Thank you!

Fixed I was late to get to the last builds, Germano. However the latest build works, 99d4321fef Thank you!

Added subscriber: @ppgoyal

Added subscriber: @ppgoyal

This is crashing for me on MacOS. Here are the steps to reproduce:

In ViewPort Shading Enable these two:

  • Cavity
  • Shadow

Now Click on "Show X-Ray" Button. It crashes immediately.

This is crashing for me on MacOS. Here are the steps to reproduce: In ViewPort Shading Enable these two: - Cavity - Shadow Now Click on "Show X-Ray" Button. It crashes immediately.

Removed subscriber: @antoniov

Removed subscriber: @antoniov
Member

@ppgoyal : not sure this is related to the report? [since you crash seems to be caused by enabling Show X-Ray? not by selecting?]
feel free to report this separately though...

@ppgoyal : not sure this is related to the report? [since you crash seems to be caused by enabling Show X-Ray? not by selecting?] feel free to report this separately though...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62999
No description provided.