Edit Mesh Selection: make sure that `GL_SCISSOR_TEST` is disabled.

Possible solution for T62999.